test/spec_vectors/memory/fail/module_25.wat
(module (memory 0 4294967295))